src/test/ui/nll/issue-52086.stderr
error[E0507]: cannot move out of an `Rc`
  --> $DIR/issue-52086.rs:8:10
   |
LL |     drop(x.field);
   |          ^^^^^^^ cannot move out of an `Rc`

error[E0507]: cannot move out of an `Arc`
  --> $DIR/issue-52086.rs:12:10
   |
LL |     drop(y.field);
   |          ^^^^^^^ cannot move out of an `Arc`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
